Fixed problem with widget title ellipsis overflow + helper classes

--- a/themes/scss/widgets/default.scss
+++ b/themes/scss/widgets/default.scss
@@ -17,7 +17,7 @@
   @include align-items(center);
   width: 100%;
   height: 22px;
-  margin: 0 0 4px;
+  margin: 0 0 2px;
 }
 .Widget-content {
   display: block;
